2001-04-04  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-w3m-attributes): When content type has trailing
	semicolon, make it removed.

	* shimbun/shimbun.el (TopLevel): Some redundant codes are removed.

	* w3mhack.el (load-path): Add `shimbun' sub-directory.

2001-04-04  Yuuichi Teranishi  <teranisi@gohome.org>

	* Makefile.in (clean): Remove shimbun modules.

	* w3mhack.el (shimbun-module-directory): New constant.
	(w3mhack-examine-modules): Add shimbun modules if mime is installed.

	* w3m.el (w3m-decode-entities): New function.
	(w3m-fontify): Use it.

	* shimbun/shimbun.el (shimbun-decode-entities):
	Define as an alias for `w3m-decode-entities'.

2001-04-04  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-print-this-url): New optional argument
	`add-kill-ring' is added.

2001-04-03  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m-filter.el: New file.

	* w3m-antenna.el (w3m-antenna-size): Refer decoded buffer as size.

	* w3m.el (TopLevel): Add autoload code of `w3m-filter'.
	(w3m-use-filter): New user option.
	(w3m-retrieve): Call `w3m-filter' when decode.

2001-04-03  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-airs.el, shimbun/sb-mew.el, shimbun/sb-wired.el,
	shimbun/sb-asahi.el, shimbun/sb-mhonarc.el, shimbun/sb-xemacs.el,
	shimbun/sb-bbdb-ml.el, shimbun/sb-netbsd.el, shimbun/sb-yomiuri.el,
	shimbun/sb-cnet.el, shimbun/sb-sponichi.el, shimbun/sb-zdnet.el,
	shimbun/sb-fml.el, shimbun/sb-tcup.el, shimbun/shimbun.el,
	shimbun/sb-lump.el, shimbun/sb-text.el: New files.

2001-04-03  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-force-redisplay): New variable, default is 't'.
	(w3m-toggle-inline-images): If w3m-force-redisplay is nil, don't
	redraw.
	(w3m-goto-url): Ditto.
	(w3m-region): Ditto.

	* mew-w3m.el (mew-mime-text/html-w3m): Bind w3m-force-redisplay to
	'nil'.
	(w3m-mew-support-cid): New variable.
	(mew-w3m-cid-retrieve): Use mew-syntax-get-entry-by-cid(),